solved align problem that implicit in hero element

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -29,7 +29,7 @@
       font-size: 1.1rem;
 
       & + a {
-        margin-left: 3.4375rem;
+        margin-left: 4rem;
       }
 
       
